<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/graylow"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:id="@+id/textViewTit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_new_edit_delete"
        android:textColor="@color/orange"
        android:layout_gravity="center_horizontal"
    />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_layout_nome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/station_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_layout_url"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/url">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        >


        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGravar"
            android:layout_marginStart="20dp"
            android:text="@string/save"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCancelar"
            android:layout_marginStart="20dp"
            android:text="@string/cancel"
            />

    </LinearLayout>

</LinearLayout>
